--- a/packages/markdown/src/public/tailwind.css
+++ b/packages/markdown/src/public/tailwind.css
@@ -1,9 +1,21 @@
+.absolute {
+  position: absolute
+}
+
 .relative {
   position: relative
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem
+.right-2 {
+  right: 0.5rem
+}
+
+.top-2 {
+  top: 0.5rem
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem
 }
 
 .flex {
@@ -12,6 +24,14 @@
 
 .h-full {
   height: 100%
+}
+
+.max-h-64 {
+  max-height: 16rem
+}
+
+.w-auto {
+  width: auto
 }
 
 .w-full {
@@ -30,10 +50,6 @@
   border-radius: 0.25rem
 }
 
-.border {
-  border-width: 1px
-}
-
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain
@@ -44,12 +60,12 @@
   line-height: 1.25rem
 }
 
-.text-slate-500 {
+.text-slate-600 {
   --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity))
+  color: rgb(71 85 105 / var(--tw-text-opacity))
 }
 
-.hover\:shadow:hover {
+.shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
