--- a/packages/markdown/src/public/utilities.css
+++ b/packages/markdown/src/public/utilities.css
@@ -1,162 +1,164 @@
 .absolute {
-  position: absolute
+  position: absolute;
 }
 
 .relative {
-  position: relative
+  position: relative;
 }
 
 .right-2 {
-  right: 0.5rem
+  right: 0.5rem;
 }
 
 .top-2 {
-  top: 0.5rem
+  top: 0.5rem;
 }
 
 .my-1 {
   margin-top: 0.25rem;
-  margin-bottom: 0.25rem
+  margin-bottom: 0.25rem;
 }
 
 .mb-1 {
-  margin-bottom: 0.25rem
+  margin-bottom: 0.25rem;
 }
 
 .flex {
-  display: flex
+  display: flex;
 }
 
 .h-full {
-  height: 100%
+  height: 100%;
 }
 
 .max-h-16 {
-  max-height: 4rem
+  max-height: 4rem;
 }
 
 .max-h-36 {
-  max-height: 9rem
+  max-height: 9rem;
 }
 
 .max-h-64 {
-  max-height: 16rem
+  max-height: 16rem;
 }
 
 .w-auto {
-  width: auto
+  width: auto;
 }
 
 .w-full {
-  width: 100%
+  width: 100%;
 }
 
 .max-w-\[50\%\] {
-  max-width: 50%
+  max-width: 50%;
 }
 
 .max-w-full {
-  max-width: 100%
+  max-width: 100%;
 }
 
 .max-w-md {
-  max-width: 28rem
+  max-width: 28rem;
 }
 
 .max-w-none {
-  max-width: none
+  max-width: none;
 }
 
 .flex-initial {
-  flex: 0 1 auto
+  flex: 0 1 auto;
 }
 
 .flex-row {
-  flex-direction: row
+  flex-direction: row;
 }
 
 .flex-col {
-  flex-direction: column
+  flex-direction: column;
 }
 
 .items-start {
-  align-items: flex-start
+  align-items: flex-start;
 }
 
 .gap-3 {
-  gap: 0.75rem
+  gap: 0.75rem;
 }
 
 .rounded {
-  border-radius: 0.25rem
+  border-radius: 0.25rem;
 }
 
 .border {
-  border-width: 1px
+  border-width: 1px;
 }
 
 .bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity))
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .object-contain {
   -o-object-fit: contain;
-     object-fit: contain
+  object-fit: contain;
 }
 
 .px-4 {
   padding-left: 1rem;
-  padding-right: 1rem
+  padding-right: 1rem;
 }
 
 .py-3 {
   padding-top: 0.75rem;
-  padding-bottom: 0.75rem
+  padding-bottom: 0.75rem;
 }
 
 .text-sm {
   font-size: 0.875rem;
-  line-height: 1.25rem
+  line-height: 1.25rem;
 }
 
 .leading-6 {
-  line-height: 1.5rem
+  line-height: 1.5rem;
 }
 
 .text-black {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity))
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-slate-600 {
   --tw-text-opacity: 1;
-  color: rgb(71 85 105 / var(--tw-text-opacity))
+  color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),
+    0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:bg-slate-200:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity))
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity))
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity))
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
   .md\:max-w-\[60\%\] {
-    max-width: 60%
+    max-width: 60%;
   }
 }
