--- a/apps/frontend-pwa/src/globals.css
+++ b/apps/frontend-pwa/src/globals.css
@@ -5,11 +5,11 @@
 
 @import 'tailwindcss/components';
 @import '@klicker-uzh/markdown/dist/components.css';
-@import 'shared-components/dist/components.css';
+@import '../shared-components/dist/components.css';
 
 @import 'tailwindcss/utilities';
 @import '@klicker-uzh/markdown/dist/utilities.css';
-@import 'shared-components/dist/utilities.css';
+@import '../shared-components/dist/utilities.css';
 
 html {
   font-size: 17px;
