--- a/apps/docs/src/css/custom.css
+++ b/apps/docs/src/css/custom.css
@@ -1,4 +1,11 @@
+@import 'tailwindcss/src/css/preflight.css';
+
+@import 'tailwindcss/base';
 @import '@uzh-bf/design-system/dist/index.esm.css';
+
+@import 'tailwindcss/components';
+
+@import 'tailwindcss/utilities';
 
 :root {
   @apply font-sans;
@@ -11,9 +18,18 @@
   --ifm-color-primary-lightest: rgb(146, 224, 208);
 }
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* :root {
+  --theme-color-primary: #0028a5;
+  --theme-color-primary-80: #3353b7;
+  --theme-color-primary-60: #667ec9;
+  --theme-color-primary-40: #99a9db;
+  --theme-color-primary-20: #ccd4ed;
+  --theme-color-secondary: #dc6027;
+  --theme-color-secondary-80: #e38052;
+  --theme-color-secondary-60: #eaa07d;
+  --theme-color-secondary-40: #f1bfa9;
+  --theme-color-secondary-20: #f8dfd4;
+} */
 
 * {
   @apply font-sans;
